--- a/src/AppBundle/Resources/views/Default/admin.html.twig
+++ b/src/AppBundle/Resources/views/Default/admin.html.twig
@@ -1,6 +1,10 @@
 {% extends '@App/base.html.twig' %}
+{% block title %}
+    Amministrazione
+{% endblock %}
 {% block body %}
     {% include '@App/templates/adminNav.html.twig' %}
+    {#{{ dump(utenze) }}#}
     <div style="height: 30px"></div>
     <div class="row text-center">
         <div class="col-md-12 text-center">
