--- a/src/AppBundle/Resources/views/templates/adminNav.html.twig
+++ b/src/AppBundle/Resources/views/templates/adminNav.html.twig
@@ -4,7 +4,7 @@
         <ul class="main-nav">
             <li><a href="{{ path('homepage') }}">Torna al sito</a></li>
             <li><a href="{{ path('admin') }}">Gestione Post</a></li>
-            <li><a href="#Portfolio">Gestione 2</a></li>
+            <li><a href="{{ path('admin-utenze') }}">Gestione Utenti</a></li>
             <li><a href="#client">Gestione 3</a></li>
             <li><a href="#team">Gestione 4</a></li>
             <li><a href="#contact">Gestione 5</a></li>
