--- a/src/AppBundle/Resources/views/Default/homepage.html.twig
+++ b/src/AppBundle/Resources/views/Default/homepage.html.twig
@@ -17,7 +17,7 @@
         </div>
     {% endif %}
     <div style="height: 50px"></div>
-    <h2>Ultimi post</h2>
+    <h2>Prossimi Eventi</h2>
 
     {#prendo gli ultimi 2 post e li mostro#}
     {% include '@App/Post/ultimiPost.html.twig' %}
