--- a/src/AppBundle/Resources/views/templates/adminNav.html.twig
+++ b/src/AppBundle/Resources/views/templates/adminNav.html.twig
@@ -3,7 +3,7 @@
         {#<div class="saluto">{{ coindesk }}</div>#}
         <ul class="main-nav">
             <li><a href="{{ path('homepage') }}">Torna al sito</a></li>
-            <li><a href="{{ path('admin') }}">Gestione Post</a></li>
+            <li><a href="{{ path('adminpost') }}">Gestione Eventi</a></li>
             <li><a href="{{ path('admin-utenze') }}">Gestione Utenti</a></li>
             <li><a href="#client">Gestione 3</a></li>
             <li><a href="#team">Gestione 4</a></li>
