--- a/src/AppBundle/Resources/views/Default/post.html.twig
+++ b/src/AppBundle/Resources/views/Default/post.html.twig
@@ -1,6 +1,6 @@
 {% extends '@App/base.html.twig' %}
 
-{% block title %}Home{% endblock %}
+{% block title %}Eventi{% endblock %}
 
 {% block stylesheets %}
     {{ parent() }}
@@ -20,7 +20,7 @@
             </div>
             <div class="row text-center">
                 <div class="col-md-12 text-center container-fluid" style="padding: 0">
-                    <img src="{{ post.img }}">
+                    <img src="{{ upload_directory }}/{{ post.img }}">
                 </div>
             </div>
             <div class="row text-center">
@@ -30,12 +30,51 @@
             </div>
             {% if post.dataInizio is not null %}
                 <div class="row text-center">
-                    <div class="col-md-6 text-center">
-                        <p>Data Inizio</p><h4>{{ post.dataInizio|date('d-m-Y H:i') }}</h4>
+                    <div class="row">
+                        <div class="col-md-2 text-center">
+                            <p>Data Inizio</p><h4>{{ post.dataInizio|date('d-m-Y') }}</h4>
+                        </div>
+                        <div class="col-md-8"></div>
+                        <div class="col-md-2 text-center">
+                            <p>Data Fine</p><h4>{{ post.dataFine|date('d-m-Y H:i') }}</h4>
+                        </div>
                     </div>
-                    <div class="col-md-6 text-center">
-                        <p>Data Fine</p><h4>{{ post.dataFine|date('d-m-Y H:i') }}</h4>
+                    <div class="row">
+                        <div style="height: 1px; border-bottom: solid #ff000d; border-width: 1px; margin: 10px"></div>
+                        <div class="col-md-2 text-center">
+                            <p>Inizio Prove</p><h4>{{ post.dataInizioProve|date('H:i') }}</h4>
+                        </div>
+                        <div class="col-md-2 text-center">
+                            <p>Fine Prove</p><h4>{{ post.dataFineProve|date('H:i') }}</h4>
+                        </div>
+                        <div class="col-md-2 text-center">
+                            <p>Inizio Qualifiche</p><h4>{{ post.dataInizioQual|date('H:i') }}
+                                <br>{{ post.dataFine|date('d-m-Y') }}</h4>
+                        </div>
+                        <div class="col-md-2 text-center">
+                            <p>Fine Qualifiche</p><h4>{{ post.dataFineQual|date('H:i') }}</h4>
+                        </div>
+                        <div class="col-md-2 text-center">
+                            <p>Inizio Gara</p><h4>{{ post.dataInizioGara|date('H:i') }}</h4>
+                        </div>
+                        <div class="col-md-2 text-center">
+                            <p>Giri di Gara</p><h4>{{ post.girigara }}</h4>
+                        </div>
                     </div>
+                    {#{{ dump(app.user.roles[0]) }}#}
+                    {% if app.user %}
+                        {% if app.user.roles[0] == 'ROLE_ADMIN' or app.user.roles[0] == 'ROLE_USER_PREMIUM' %}
+                            <div class="row" style="background-color: beige">
+                                <div class="col-md-12">{{ post.altro }}</div>
+                            </div>
+                            {% else %}
+                                <div class="row" style="background-color: beige">
+                                    <div class="col-md-12">Richiesta Donazione</div>
+                                </div>
+                        {% endif %}
+                        {% else %}
+                            <div class="col-md-12">Registrati ora per partecipare</div>
+                    {% endif %}
                 </div>
             {% endif %}
         {% endif %}
