--- a/src/AppBundle/Resources/views/templates/navigation.html.twig
+++ b/src/AppBundle/Resources/views/templates/navigation.html.twig
@@ -20,7 +20,7 @@
             <li><a href="#team">Menu</a></li>
             <li><a href="#contact">Menu</a></li>
             {% if app.user and app.user.roles[0]=='ROLE_ADMIN' %}
-                <li><a style="color: red" href="{{ path('admin') }}">Gestione sito</a></li>
+                <li><a style="color: red" href="{{ path('adminpost') }}">Gestione sito</a></li>
                 <li><a href="{{ path('logout') }}">Logout</a></li>
             {% elseif app.user and app.user.roles[0] != 'ROLE_ADMIN' %}
                 <li><a href="{{ path('logout') }}">Logout</a></li>
