--- a/src/AppBundle/Resources/views/templates/header.html.twig
+++ b/src/AppBundle/Resources/views/templates/header.html.twig
@@ -11,6 +11,6 @@
         <ul class="we-create animated fadeInUp delay-1s">
             <li>We are a digital agency that loves crafting beautiful websites.</li>
         </ul>
-        <a class="link animated fadeInUp delay-1s" href="#">Get Started</a>
+        <a class="link animated fadeInUp delay-1s" href="{{ path('user_registration') }}">Unisciti a noi</a>
     </div>
 </header>
